samples/_failures_safe/1761078352_e0fa07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9868b521.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_9868b521.c:153:9: error: ‘current’ undeclared (first use in this function)
  153 |     if (current
      |         ^~~~~~~
./samples/SAFE/__tmp_9868b521.c:153:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9868b521.c:153:16: error: expected ‘)’ at end of input
  153 |     if (current
      |        ~       ^
      |                )
./samples/SAFE/__tmp_9868b521.c:153:5: error: expected declaration or statement at end of input
  153 |     if (current
      |     ^~
